<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.emili.sqliteproject.AjouterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:text="@string/identite"
        style="@style/editContact"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/edit_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/prenom"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp" />


    <EditText
        android:id="@+id/edit_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nom"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="150dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:text="@string/genre"
        style="@style/editContact"
        android:layout_marginStart="20dp" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="260dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:text="@string/age"
        style="@style/editContact"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/quatorze"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="150dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="150dp" />


</android.support.constraint.ConstraintLayout>
