<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#FD8E09">


        <TextView
            android:id="@+id/list_prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            style="@style/contactList"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/list_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            style="@style/contactList"
            android:layout_marginStart="20dp" />


    <TextView
        android:id="@+id/list_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="165dp"
        style="@style/contactList"
        android:layout_marginStart="165dp" />


    <TextView
        android:id="@+id/list_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="300dp"
        style="@style/contactList"
        android:layout_marginStart="300dp" />

        <View
            android:id="@+id/trait"
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="#000"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"/>





</android.support.constraint.ConstraintLayout>